@@ -43,6 +43,13 @@ private:
     virtual bool isPluginWidget() const { return true; }
 };
 
+#if USE(ACCELERATED_COMPOSITING) && !PLATFORM(MAC)
+inline PlatformLayer* PluginWidget::platformLayer() const
+{
+    return 0;
+}
+#endif
+
 } // namespace WebCore
 
 #endif // PluginWidget_h
